--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="李卫的web前端开发工程个人简历">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web前端个人简历</title>
-    <link href="./image/favicon.png" rel="shortcut icon">
-    <link rel="stylesheet"  href="./css/style.css">
+    <link href="image/favicon.png" rel="shortcut icon">
+    <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.css">
 </head>
 <body>
 <div id="head">
     <div class="head-left">
-        <img src="./image/timg.jpg">
+        <img src="image/timg.jpg">
         <div id="head-tit">
             <span id="head-e">Liwei</span><hr/>
             <span id="head-c">前端个人简历</span>
@@ -33,18 +33,18 @@
 </div>
 <div id="fullpage">
     <div class="section section1">
-        <h1>你只管努力，上天自有安排</h1>
+        <h1>你只管努力拼搏，上天自有安排</h1>
         <div class="sec1p">
-            <p class="secp1">一个在前端路上不断探索的偏执狂</p>
+            <p class="secp1">一个在前端路上不断学习的偏执狂</p>
             <p class="secp2">爱编程，爱前端，爱新技术</p>
-            <p class="secp3">享受每一份从无到有的成就感</p>
+            <p class="secp3">享受每一份从无到有的成就感！</p>
         </div>
     </div>
     <div class="section section2" >
         <h1>关于我</h1>
         <div class="sec2Bor">
             <div class="sectionText">
-                <img src="./image/timg.jpg">
+                <img src="image/timg.jpg">
                 <p>姓名：李卫</p>
                 <p>年龄：25</p>
                 <p>电话：18011681313</p>
@@ -116,13 +116,12 @@
             <span id="pic-h">
                 <p class="h-tit">语言方面</p>
                 <ul class="sec4-list">
-                    <li class="head-view">熟悉HTML/CSS语言，能够运用Div+Css手写代码</li>
+                    <li class="head-view">熟悉HTML/CSS语言,能够运用Div+Css手写代码</li>
                     <li>熟悉JavaScript、ajax</li>
-                    <li>熟悉es6语法</li>
+                    <li>了解es6语法</li>
                     <li>了解HTML5新特性</li>
                 </ul>
             </span>
-
             <span id="pic-c">
                 <p class="c-tit">框架方面</p>
                 <ul class="sec4-list">
@@ -131,13 +130,12 @@
                     <li>熟练使用jQuery</li>
                 </ul>
             </span>
-
             <span id="pic-j">
                 <p class="j-tit">工具方面</p>
                 <ul class="sec4-list">
                     <li>了解Node.js、Linux操作</li>
                     <li class="head-view">了解MongoDB数据库</li>
-                    <li>webpack自动化构建工具、APICloud手机app开发工具</li>
+                    <li>webpack,gulp自动化构建工具、APICloud手机app开发工具</li>
                     <li>熟练使用ps进行切图</li>
                 </ul>
             </span>
@@ -145,9 +143,9 @@
             <span id="pic-aj">
                 <p class="aj-tit">其余技能</p>
                 <ul class="sec4-list">
-                    <li>熟练使用firebug，chrome调试工具调试代码</li>
-                    <li class="head-view">了解网页中 SEO 的一些基本理念</li>
-                    <li>熟练使用Brackets，webstrom等工具进行前端页面手工式开发</li>
+                    <li>熟练使用firebug,chrome调试工具调试代码</li>
+                    <li class="head-view">会使用一些插件及其页面优化，比如swiper,fullpage,amcharts等</li>
+                    <li>熟练使用Brackets,webstrom等IDE进行前端页面手工式开发,符合w3c标准</li>
                     <li>正在深入学习React</li>
                 </ul>
             </span>
@@ -156,9 +154,9 @@
     <div class="section section5">
         <h1>·我的作品·</h1>
         <div class="slide">
-            <img class="pic3" src="./image/xm3.jpg" alt="pc">
-            <img class="pic2" src="./image/xm2.jpg" alt="pc">
-            <img class="pic1" src="./image/xm1.jpg" alt="pc">
+            <img class="pic3" src="image/xm3.jpg" alt="pc">
+            <img class="pic2" src="image/xm2.jpg" alt="pc">
+            <img class="pic1" src="image/xm1.jpg" alt="pc">
             <div class="slide-text">
                 <h2>小米官方网站</h2>
                 <p><strong>技术实现：</strong>HTML5、CSS3、javascript</p>
@@ -177,11 +175,10 @@
                 </ul>
             </div>
         </div>
-        <!-- 第二屏 -->
         <div class="slide">
-            <img class="pic3" src="./image/lrj3.jpg" alt="bootstrap">
-            <img class="pic2" src="./image/lrj2.jpg" alt="bootstrap">
-            <img class="pic1" src="./image/lrj1.jpg" alt="bootstrap">
+            <img class="pic3" src="image/lrj3.jpg" alt="bootstrap">
+            <img class="pic2" src="image/lrj2.jpg" alt="bootstrap">
+            <img class="pic1" src="image/lrj1.jpg" alt="bootstrap">
             <div class="slide-text">
                 <h2>Bootstrap自适应网站</h2>
                 <p><strong>技术实现：</strong>HTML、CSS、Bootstrap</p>
@@ -199,11 +196,10 @@
                 </ul>
             </div>
         </div>
-        <!-- 第三屏 -->
         <div class="slide">
-            <img class="pic3" src="./image/jm3.jpg" alt="jQueryMobile">
-            <img class="pic2" src="./image/jm2.jpg" alt="jQueryMobile">
-            <img class="pic1" src="./image/jm1.jpg" alt="jQueryMobile">
+            <img class="pic3" src="image/jm3.jpg" alt="jQueryMobile">
+            <img class="pic2" src="image/jm2.jpg" alt="jQueryMobile">
+            <img class="pic1" src="image/jm1.jpg" alt="jQueryMobile">
             <div class="slide-text">
                 <h2>jQuery Mobile 移动端网站</h2>
                 <p><strong>技术实现：</strong>HTML5、CSS3、jQuery、jQuery Mobile</p>
@@ -224,9 +220,9 @@
         </div>
         <!-- 第四屏 -->
         <div class="slide">
-            <img class="pic3" src="./image/app3.jpg" alt="APICloud">
-            <img class="pic2" src="./image/app2.jpg" alt="APICloud">
-            <img class="pic1" src="./image/app1.jpg" alt="APICloud">
+            <img class="pic3" src="image/app3.jpg" alt="APICloud">
+            <img class="pic2" src="image/app2.jpg" alt="APICloud">
+            <img class="pic1" src="image/app1.jpg" alt="APICloud">
             <div class="slide-text">
                 <h2>APICloud 手机app开发</h2>
                 <p><strong>技术实现：</strong>TML5、CSS3、jQuery、APICloud</p>
@@ -248,10 +244,10 @@
     </div>
     <div class="section section6">
         <h1 id="sec6-h">联系方式</h1>
-        <img class="sec6-pic1" src="./image/bg81.png" alt="">
+        <img class="sec6-pic1" src="image/bg81.png" alt="">
         <div class="sec6-p">
             <div>
-                <img id="sec6pic" src="./image/qq1.jpg">
+                <img id="sec6pic" src="image/qq1.jpg">
             </div>
             <ul>
                 <li>电话：18011681313</li>
@@ -266,6 +262,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/vendors/jquery.easings.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/move.js/0.3.3/move.js"></script>
-<script src="./js/index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
