--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="web前端，web前端个人简历，前端开发">
-    <meta name="description" content="李卫的web前端开发工程个人简历">
+    <meta name="description" content="李卫的web前端开发工程个人简历，李卫当官，攻城狮">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web前端个人简历</title>
     <link href="image/favicon.png" rel="shortcut icon">
-    <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.css">
+    <link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
+    <!-- 头部 S -->
 <div id="head">
     <div class="head-left">
         <img src="image/timg.jpg">
@@ -25,13 +26,15 @@
             <li><a href="#page1">首页</a></li>
             <li><a href="#page2">关于我</a></li>
             <li><a href="#page3">心路历程</a></li>
-            <li class="head-view"><a href="#page4">专业技能</a></li>
-            <li class="head-view"><a href="#page5">我的作品</a></li>
+            <li><a href="#page4">专业技能</a></li>
+            <li><a href="#page5">我的作品</a></li>
             <li><a href="#page6">联系我</a></li>
         </ul>
     </div>
 </div>
+<!-- 头部 E -->
 <div id="fullpage">
+    <!-- 第一屏 S-->
     <div class="section section1">
         <h1>你只管努力拼搏，上天自有安排</h1>
         <div class="sec1p">
@@ -40,6 +43,8 @@
             <p class="secp3">享受每一份从无到有的成就感！</p>
         </div>
     </div>
+    <!-- 第一屏 E-->
+    <!-- 第二屏 S-->
     <div class="section section2" >
         <h1>关于我</h1>
         <div class="sec2Bor">
@@ -55,6 +60,8 @@
             </div>
         </div>
     </div>
+    <!-- 第二屏 E-->
+     <!-- 第三屏 S-->
     <div class="section section3">
         <div id="sec3Nav">
             <ul>
@@ -110,53 +117,58 @@
             </div>
         </div>
     </div>
+     <!-- 第三屏 E-->
+     <!-- 第四屏 S--> 
     <div class="section section4">
         <h1>·专业技能·</h1>
         <div class="sec4-pic">
             <span id="pic-h">
-                <p class="h-tit">语言方面</p>
+                <p class="h-tit blank_text">语言方面</p>
                 <ul class="sec4-list">
-                    <li class="head-view">熟悉HTML/CSS语言,能够运用Div+Css手写代码</li>
+                    <li class="head-view">熟悉HTML/CSS语言,能够运用Div+Css快速手写代码</li>
                     <li>熟悉JavaScript、ajax</li>
                     <li>了解es6语法</li>
                     <li>了解HTML5新特性</li>
                 </ul>
             </span>
             <span id="pic-c">
-                <p class="c-tit">框架方面</p>
+                <p class="c-tit blank_text">框架方面</p>
                 <ul class="sec4-list">
+                    <li>熟练使用jQuery、Anuglar、Flexible</li>
                     <li>熟练使用BootStrap框架</li>
                     <li>熟练使用jQuery Mobile框架</li>
-                    <li>熟练使用jQuery</li>
                 </ul>
             </span>
             <span id="pic-j">
-                <p class="j-tit">工具方面</p>
+                <p class="j-tit blank_text">工具方面</p>
                 <ul class="sec4-list">
                     <li>了解Node.js、Linux操作</li>
-                    <li class="head-view">了解MongoDB数据库</li>
-                    <li>webpack,gulp自动化构建工具、APICloud手机app开发工具</li>
+                    <li class="head-view">了解gulp自动化构建工具、APICloud混合开发app工具</li>
+                    <li>会使用svn管理代码</li>
                     <li>熟练使用ps进行切图</li>
                 </ul>
             </span>
 
             <span id="pic-aj">
-                <p class="aj-tit">其余技能</p>
+                <p class="aj-tit blank_text">其余技能</p>
                 <ul class="sec4-list">
+                    <li>会使用微信小程序开发，能够快速写出移动端页面</li>
                     <li>熟练使用firebug,chrome调试工具调试代码</li>
                     <li class="head-view">会使用一些插件及其页面优化，比如swiper,fullpage,amcharts等</li>
-                    <li>熟练使用Brackets,webstrom等IDE进行前端页面手工式开发,符合w3c标准</li>
-                    <li>正在深入学习React</li>
+                    <li>熟练使用Brackets,Webstrom,VS,Sublime等IDE进行前端页面手工式开发,符合w3c标准</li>
+                    <li>正在学习React-Native,handelbars.js</li>
                 </ul>
             </span>
         </div>
     </div>
+      <!-- 第四屏 E--> 
+     <!-- 第五屏 S-->
     <div class="section section5">
         <h1>·我的作品·</h1>
         <div class="slide">
-            <img class="pic3" src="image/xm3.jpg" alt="pc">
-            <img class="pic2" src="image/xm2.jpg" alt="pc">
-            <img class="pic1" src="image/xm1.jpg" alt="pc">
+            <img class="pic3" src="image/xm3.jpg" alt="小米">
+            <img class="pic2" src="image/xm2.jpg" alt="小米">
+            <img class="pic1" src="image/xm1.jpg" alt="小米">
             <div class="slide-text">
                 <h2>小米官方网站</h2>
                 <p><strong>技术实现：</strong>HTML5、CSS3、javascript</p>
@@ -197,35 +209,34 @@
             </div>
         </div>
         <div class="slide">
-            <img class="pic3" src="image/jm3.jpg" alt="jQueryMobile">
-            <img class="pic2" src="image/jm2.jpg" alt="jQueryMobile">
-            <img class="pic1" src="image/jm1.jpg" alt="jQueryMobile">
+            <img class="pic3" src="image/wx1.png" alt="小程序">
+            <img class="pic2" src="image/wxxcx2.png" alt="小程序">
+           
             <div class="slide-text">
-                <h2>jQuery Mobile 移动端网站</h2>
-                <p><strong>技术实现：</strong>HTML5、CSS3、jQuery、jQuery Mobile</p>
+                <h2>微信小程序</h2>
+                <p><strong>技术实现：</strong>CSS3、小程序框架</p>
                 <p><strong>项目描述：</strong>实现手机端页面能够访问，注册、登录等页面</p>
                 <p><strong>实现技术：</strong></p>
                 <ul>
                     <li>根据产品需求分析并给出最优的网页前端结构解决方案并完成效果实现</li>
-                    <li>利用div+css等将页面实现，高度还原设计图</li>
-                    <li>使用原生jQuery Mobile框架完成页面动态交互</li>
+                    <li>利用小程序框架将页面实现，高度还原设计图</li>
+                    <li>使用小程序框架完成页面动态交互</li>
                 </ul>
                 <p><strong>项目收获：</strong></p>
                 <ul>
-                    <li>更加熟悉了jQuery Mobile的使用</li>
-                    <li>加深了对布局理解</li>
-                    <li>熟悉了css3标准，解决常见兼容性问题</li>
+                    <li>熟悉了微信小程序的使用</li>
+                    <li>熟悉了对小程序布局和数据交互理解</li>
                 </ul>
             </div>
         </div>
-        <!-- 第四屏 -->
+        
         <div class="slide">
             <img class="pic3" src="image/app3.jpg" alt="APICloud">
             <img class="pic2" src="image/app2.jpg" alt="APICloud">
             <img class="pic1" src="image/app1.jpg" alt="APICloud">
             <div class="slide-text">
                 <h2>APICloud 手机app开发</h2>
-                <p><strong>技术实现：</strong>TML5、CSS3、jQuery、APICloud</p>
+                <p><strong>技术实现：</strong>HTML5、CSS3、jQuery、APICloud</p>
                 <p><strong>项目描述：</strong>实现手机app访问</p>
                 <p><strong>实现技术：</strong></p>
                 <ul>
@@ -237,11 +248,33 @@
                 <ul>
                     <li>巩固了原生js基础</li>
                     <li>进一步理解手机端app的开发流程</li>
-                    <li>熟练使用firebug，chrome调试工具调试代码</li>
+                </ul>
+            </div>
+        </div>
+        <div class="slide">
+            <img class="pic3" src="image/houtai1.png" alt="anuglar">
+            <img class="pic2" src="image/houtai2.png" alt="anuglar">
+            <div class="slide-text">
+                <h2>Anuglar 开发后台管理里界面</h2>
+                <p><strong>技术实现：</strong>HTML5、CSS3、jQuery、Anuglar、Bootstrap</p>
+                <p><strong>项目描述：</strong>实现后台管理界面，管理app的数据及对数据的管理</p>
+                <p><strong>实现技术：</strong></p>
+                <ul>
+                    <li>根据产品需求分析并给出最优的网页前端结构解决方案并完成效果实现</li>
+                    <li>利用Bootstrap+css等将页面实现，高度还原设计图</li>
+                    <li>用jQuery、Anuglar对页面数据交互，并进行特效制作</li>
+                    <li>兼容PC端和移动端操作</li>
+                </ul>
+                <p><strong>项目收获：</strong></p>
+                <ul>
+                    <li>熟悉了Anuglar框架</li>
+                    <li>熟悉了用框架开发后台管理端流程</li>
                 </ul>
             </div>
         </div>
     </div>
+     <!-- 第五屏 E-->
+    <!-- 第六屏 S-->
     <div class="section section6">
         <h1 id="sec6-h">联系方式</h1>
         <img class="sec6-pic1" src="image/bg81.png" alt="">
@@ -250,13 +283,14 @@
                 <img id="sec6pic" src="image/qq1.jpg">
             </div>
             <ul>
-                <li>电话：18011681313</li>
+                <li><a href="tel:18011681313" class="tel">电话：18011681313</a></li>
                 <li>邮箱：540263911@qq.com</li>
                 <li>Q Q：540263911</li>
                 <li id="sec6li">微信：meiyouweixin668</li>
             </ul>
         </div>
     </div>
+     <!-- 第六屏 E-->
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.2/jquery.fullPage.js"></script>
