--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
                     <li>根据产品需求分析并给出最优的网页前端结构解决方案并完成效果实现</li>
                     <li>利用css+html等将页面实现，高度还原设计图</li>
                     <li>用Bootstrap对页面原型进行布局搭建，并进行特效制作</li>
+                    <li><a href="https://jchx2012.github.io/bootstrap/">项目链接</a></li>
                 </ul>
                 <p><strong>项目收获：</strong></p>
                 <ul>
