--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
         window.location.href = "yd.html";   //移动端
     } else {
-        window.location.href = "index.html";   //pc端
+        window.location.href = "pc.html";   //pc端
     }
 
 
