--- a/yd.html
+++ b/yd.html
@@ -148,9 +148,9 @@
     <meta content="telephone=no,email=no" name="format-detection">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
-    <meta itemprop="name" content="移动页面" />
-    <meta name="description" itemprop="description" content="移动页面" />
-    <title>移动页面</title>
+    <meta itemprop="name" content="个人简历" />
+    <meta name="description" itemprop="description" content="个人简历" />
+    <title>个人简历</title>
     <link rel="stylesheet" href="http://oss2.yicheku.com.cn/res/temp_v2/css/reset.css">
     <style>
         .wrap {
