--- a/yd.html
+++ b/yd.html
@@ -145,9 +145,8 @@
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta content="telephone=no,email=no" name="format-detection">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-touch-fullscreen" content="yes">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="apple-touch-fullscreen">
     <meta itemprop="name" content="个人简历" />
     <meta name="description" itemprop="description" content="个人简历" />
     <title>个人简历</title>
