--- a/yd.html
+++ b/yd.html
@@ -175,11 +175,9 @@
         /* #### 头部E #### */
         .title{
             width: 8.6rem;
-            margin: 0 auto;
-            height: 2rem;
-            position: fixed;
-            top:calc(50% - 1rem);
-            left:calc(50% - 4.3rem);
+            margin: 1.5rem auto 0 auto;
+            height: 3.5rem;
+            
             text-align: center;
         }
         .title p{
